--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,6 @@ dependencies {
     implementation "androidx.preference:preference-ktx:1.1.1"
 
     implementation 'com.squareup.picasso:picasso:2.71828'
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
+    //debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
 
 }
