--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     //debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.6'
 
+    implementation "androidx.browser:browser:1.2.0"
 }
